# wagtail-inspect

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  LICENSE  README.md  bunfig.toml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  bug-reproduction-prompt.md  frontend-controllers.md  implementation-review.md  index.md  monkey-patching-alternatives.md  python-backend.md
docs/issues/: 001-wagtail-version-compatibility.md  002-no-test-suite.md  003-no-feature-flag.md  007-hardcoded-z-index.md  012-template-script-injection.md  README.md
src/wagtail_inspect/: __init__.py  apps.py  block_map.py  patches.py  views.py  wagtail_hooks.py
src/wagtail_inspect/static/wagtail_inspect/css/: preview-inspect.css
src/wagtail_inspect/static/wagtail_inspect/js/: inspect-augment.js  inspect-core.js  preview-inspect-controller.js  preview-inspect-helpers.js  userbar-inspect.js
src/wagtail_inspect/templates/wagtail_inspect/userbar/: item_inspect_preview.html
testproject/testapp/: apps.py  blocks.py  models.py  settings.py  urls.py
testproject/testapp/management/commands/: dump_test_fixture.py
testproject/testapp/migrations/: 0001_initial.py  0002_alter_testpage_body.py  0003_alter_testpage_body.py  0004_auto_20260317_2353.py  0005_refactor_button_block.py  0006_alter_testpage_body.py  0007_alter_testpage_body.py  0008_alter_testpage_body.py  0009_alter_testpage_body.py  0010_remove_cta_callout_block.py  0011_remove_card_block.py  0012_alter_testpage_body.py  0013_merge_button_block.py  0014_cta_banner_buttons_list.py  0015_alter_testpage_body.py  0016_container_block.py  0017_container_block_drop_reverse.py  0018_alter_testpage_body.py
testproject/testapp/templates/testapp/: base.html  test_page.html
testproject/testapp/templates/testapp/blocks/: badge.html  button.html  container.html  cta.html  cta_banner.html  enhanced_hero_section.html  faq_item.html  faq_section.html  feature_grid.html  feature_item.html  footer_section.html  hero_section.html  logo_cloud.html  logo_item.html  pricing_plan.html  pricing_section.html  rich_text_section.html  stat_item.html  stats_section.html  tag_list.html  testimonial_item.html  testimonial_section.html  text_with_image.html
tests/backend/: block_map_fakes.py  conftest.py  settings.py  test_app_config.py  test_block_map.py  test_patches.py  test_views.py  test_wagtail_hooks.py
tests/e2e/: conftest.py  settings.py  test_editor_preview.py  test_rich_blocks.py  test_standalone_preview.py
tests/e2e/fixtures/: test_data.json
tests/frontend/: inspect-augment.test.js  inspect-core.test.js  preview-inspect-controller.test.js  preview-inspect-helpers.test.js  setup.js  static-dir.js  userbar-inspect.test.js
